--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.1
+django-cors-headers==3.5.0
 djangorestframework==3.11.1
 html5lib==1.0.1
 idna==2.8
@@ -22,6 +23,7 @@ msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
 progress==1.5
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pylint==2.6.0
 pyparsing==2.4.6
